--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <!-- banner section -->
         <section id="banner" class="">
-            <div class="flex lg:flex-row flex-col justify-between items-center lg:px-12 px-6 lg:mt-0 mt-8">
+            <div class="flex lg:flex-row flex-col justify-between items-center lg:px-12 px-6 lg:mt-5 mt-8">
                 <div>
                     <h2 class=" mb-3 font-bold text-4xl"> <span class="text-[#00BCFF]">English</span> is Easy!!</h2>
                     <p>আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন। আপনি যদি নতুন হন অথবা <br>
@@ -93,14 +93,14 @@
 
 
                 <div>
-                    <img class="w-[504px]" src="./assets/hero-student.png" alt="">
+                    <img class="lg:w-[350px] w-[300px]" src="./assets/our-mentor.png" alt="">
                 </div>
             </div>
         </section>
 
 
         <!-- learn section -->
-        <section id="learn" class="mt-40 scroll-mt-28 hidden">
+        <section id="learn" class="mt-40 scroll-mt-20 hidden">
             <h2 class="py-8 lg:text-5xl text-2xl text-center font-bold"> <span class="text-[#00BCFF]">Let's</span> Learn
                 Vocabularies</h2>
 
@@ -125,7 +125,7 @@
 
 
         <!-- FAQ section -->
-        <section id="faq" class="mt-56 scroll-mt-56 hidden">
+        <section id="faq" class="mt-56 scroll-mt-16 hidden">
             <h2 class="py-8 lg:text-5xl text-2xl text-center font-bold"> <span class="text-[#00BCFF]">Frequently</span>
                 Asked Questions</h2>
 
